# BBS_app

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/poseencryption/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libheaan.cpp
app/src/main/cpp/lib/gmp/include/shared/: gmp.h
app/src/main/cpp/lib/gmp/lib/shared/: libgmp.la  libgmpxx.la
app/src/main/cpp/lib/heaan/: src
app/src/main/cpp/lib/heaan/include/: Params.h  Ring.h  Scheme.h  SecretKey.h  SerializationUtils.h
app/src/main/cpp/lib/ntl/include/NTL/: SmartPtr.h  config.h
app/src/main/cpp/lib/ntl/src/: FFT.cpp  GetTime3.cpp  MakeDesc.cpp  ZZ.cpp  gen_gmp_aux.cpp
app/src/main/java/com/example/poseencryption/: Constants.kt  MainActivity.kt  MainViewModel.kt  PoseLandMark.kt  PosePracActivity.kt
app/src/main/java/com/example/poseencryption/api/: ApiService.kt  RetrofitClient.kt  UrlManager.kt
app/src/main/java/com/example/poseencryption/fragment/: CaptureFragment.kt  GuideFragment.kt  HomeFragment.kt  KeyFragment.kt  ResultFragment.kt
app/src/main/res/drawable/: bg_34308f_layout.xml  bg_f0f4fd_layout.xml  bg_f8f8f8_layout.xml  bg_purple_layout.xml  ic_background_8166e9.xml  selector_guide.xml  selector_home.xml  selector_key.xml  selector_result.xml  selector_video.xml  video_shape.xml  video_true_icon.xml
app/src/main/res/drawable-hdpi/: bg_black_layout.xml  bg_blue_layout.xml
app/src/main/res/layout/: activity_main.xml  fragment_capture.xml  fragment_guide.xml  fragment_home.xml  fragment_key.xml  fragment_result.xml
app/src/main/res/menu/: bottom_navigation_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/poseencryption/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
